cabal-version:      3.4
name:               hgeometry-examples
version:            1.0.0.0
synopsis:           Examples for HGeometry
description:
    Examples of Geometric Algorithms implemented using HGeometry

homepage:           https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
data-files:          data/**/*.in
                     data/**/*.out

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------
-- common setup-extras
--     build-depends:
--         aeson                   >= 2.1

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                -fspecialise-aggressively -fexpose-all-unfoldings

    build-depends:
        base                    >= 4.16.1.0      &&  < 5
      , hgeometry-combinatorial >= 1.0.0.0
      , hgeometry               >= 1.0.0.0
      , hgeometry:vector
      , hgeometry:point
      , hgeometry:kernel
      , hgeometry:ipe
      , hgeometry:svg
      , hiraffe                 >= 0.1
      , containers              >= 0.6
      , vector                  >= 0.13
      , lens                    >= 5.2
      , deepseq                 >= 1.1
      , semigroupoids           >= 5
      , semigroups              >= 0.18
      , random                  >= 1.2
      , witherable              >= 0.4
      , linear                  >= 1.21
      , data-clist              >= 0.2
      , data-default-class      ^>= 0.1
      , array                   >= 0.5

      , ghc-typelits-natnormalise >= 0.7.7
      , ghc-typelits-knownnat     >= 0.7.6

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies

common miso-setup
  build-depends:
        miso
      , jsaddle
      , jsaddle-warp

common quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      , QuickCheck              >= 2.10
      , quickcheck-instances
      , hgeometry


--------------------------------------------------------------------------------
-- * BAPC 2012 Gunslinger

executable hgeometry-bapc2012-gunslinger
  import:         setup
  hs-source-dirs: bapc2012
  main-is:        Gunslinger.hs

--------------------------------------------------------------------------------
-- * BAPC 2014 Armybase

executable hgeometry-bapc2014-armybase
  import:         setup
  hs-source-dirs: bapc2014
  main-is:        Armybase.lhs

--------------------------------------------------------------------------------
-- * ConvexHull

executable hgeometry-convexHull
  import:         setup, miso-setup
  hs-source-dirs: convexHull
  main-is:        Main.hs

--------------------------------------------------------------------------------
-- * LineSegment Intersect

executable hgeometry-lineSegmentIntersection
  import:         setup, miso-setup
  hs-source-dirs: lineSegmentIntersection
  main-is:        Main.hs

--------------------------------------------------------------------------------
-- * Duality

executable hgeometry-duality
  import:         setup, miso-setup
  hs-source-dirs: duality
  main-is:        Main.hs


--------------------------------------------------------------------------------
-- * Voronoi Diagram

executable hgeometry-voronoi
  import:         setup, miso-setup
  hs-source-dirs: voronoiDiagram
  main-is:        Main.hs
