name:                hgeometry-interactive
version:             0.8.0.0
synopsis:            Interactive viewer for HGeometry
description:
    A GUI To view and play with geometric data using HGeometry

homepage:            https://fstaals.net/software/hgeometry
license:             BSD3
license-file:        LICENSE
author:              Frank Staals
maintainer:          frank@fstaals.net
-- copyright:

tested-with:         GHC >= 8.2

category:            Geometry
build-type:          Simple

data-files:
                     -- in the future (cabal >=2.4) we can use
                     -- examples/**/*.in
                     -- examples/**/*.out

extra-source-files:  README.md
                     changelog.org

Extra-doc-files:
                     -- docs/**/*.png

cabal-version:       2.0
source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry


executable hgeometry-viewer
  main-is: MisoViewer.hs

  build-depends: base
               , hgeometry
               , hgeometry-combinatorial
               , lens
               , containers
               , vinyl
               , semigroups
               , optparse-applicative   >= 0.13.0.0
               , text
               , hexpat
               , bytestring
               , directory
               , time
               , random
               , vector
               , colour
               , transformers
               , linear
               , miso           >= 0.21.2.0
               , jsaddle        >= 0.9.5
               , jsaddle-warp   >= 0.9.5
               , jsaddle-dom    >= 0.9.2
               , wai
               , wai-app-static
               , warp
               , websockets

  hs-source-dirs: src

  other-modules: Svg
                 -- ConvexHull

  default-language: Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes

                    , PatternSynonyms
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable

                    , DeriveDataTypeable
                    , AutoDeriveTypeable

                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , TypeApplications
