cabal-version:  2.0
name:           hgeometry-interactive
version:        0.1.0.0
description:    Interactive native viewer for HGeometry
homepage:       https://fstaals.net/software/hgeometry
license:        BSD3
license-file:   LICENSE
author:         Frank Staals
maintainer:     frank@fstaals.net
copyright:      2020 Frank Staals
build-type:     Simple
extra-source-files:
    README.md
    changelog.org

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

library
  ghc-options: -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults

  exposed-modules:
                  Lib
                  App.Main
                  App.Minimal

  other-modules:
      Paths_hgeometry_interactive
  hs-source-dirs:
      src
  build-depends:
                base                    >= 4.7 && <5
              , hgeometry-combinatorial >= 0.10
              , hgeometry               >= 0.10
              , hgeometry-ipe           >= 0.10
              , lens                    >= 4.0
              , semigroupoids           >= 5.3
              , containers              >= 0.6
              , vinyl                   >= 0.10
              , mtl                     >= 2.2.2
              , reflex-sdl2             >= 0.3.0.0
              , sdl2                    >= 2.3
              , sdl2-cairo              >= 0.2
              , reflex                  >= 0.5
              , cairo-canvas            >= 0.1.0.0

  default-language: Haskell2010


  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , DeriveGeneric

                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses


executable hgeometry-interactive
  main-is: Main.hs
  other-modules:
      Paths_hgeometry_interactive
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hgeometry-interactive
  default-language: Haskell2010

test-suite hgeometry-interactive-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hgeometry_interactive
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hgeometry-interactive
  default-language: Haskell2010
