cabal-version:      3.4
name:               hgeometry-ipe
version:            1.0.0.0
synopsis:           Reading and writing Ipe files
description:
  Support for reading and writing ipe files from HGeometry types

homepage:           https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:
    README.md
    changelog.txt
-- extra-source-files:
data-dir: data
data-files:
    basic.isy
    opacities.isy
    test/*.ipe

tested-with:
    GHC == 9.12.2
  -- , GHC == 9.10.1
  -- , GHC == 9.8.2

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------

common all-setup
    ghc-options: -O2 -fspecialise-aggressively -fexpose-all-unfoldings
                 -Wall
                 -fno-warn-unticked-promoted-constructors
                 -fno-warn-type-defaults
                 -fno-warn-partial-type-signatures
                 -Werror=missing-methods

    build-depends:
        base                      >= 4.16.1        && < 5
      , hgeometry-combinatorial   >= 1             && < 1.1
      , hgeometry-vector          >= 1             && < 1.1
      , hgeometry-point           >= 1             && < 1.1
      , hgeometry-kernel          >= 1             && < 1.1
      , hgeometry-polyLine        >= 1             && < 1.1
      , hgeometry-spline          >= 1             && < 1.1
      , hgeometry-polygon         >= 1             && < 1.1
      , containers                >= 0.6           && < 1
      , bytestring                >= 0.11          && < 1
      , lens                      >= 5.2           && < 6
      , semigroupoids             >= 6.0.0.2       && < 7
      , random                    >= 1.3           && < 2
      , witherable                >= 0.4           && < 1
      , nonempty-vector           >= 0.2           && < 1
      , data-default              >= 0.8           && < 1
      , filepath                  >= 1.4.100       && < 2
      , file-io                   >= 0.1           && < 1
      , hexpat                  >= 0.20.9        && < 1
      , parsec                  >= 3             && < 4
      , text                    >= 2.1.2         && < 3
      , typed-process           >= 0.2.6         && < 1
      , colour                  >= 2.3.6         && < 3
      , vinyl                   >= 0.14          && < 1
      , singletons              >= 3             && < 4
      , singletons-th           >= 3             && < 4
      , template-haskell        >= 2.10          && < 3
      , directory               >= 1.3.8         && < 2
      , approximate-equality    >= 1.1.0.2       && < 1.2

    default-language: GHC2024

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies
      , PartialTypeSignatures

common doctest
    build-depends:
      , doctest                    >= 0.8      && < 1

common all-quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                           >= 2.9     && < 3
      , QuickCheck                      >= 2.10    && < 3
      , quickcheck-instances            >= 0.3     && < 1
      , approximate-equality            >= 1.1.0.2 && < 1.2

common quickcheck-setup
    build-depends:
        hgeometry-kernel:quickcheck
      , hgeometry-vector:quickcheck
      , hgeometry-point:quickcheck
      , hgeometry-polyLine:quickcheck
      , hgeometry-polygon:quickcheck
      , hgeometry

common ipe-test-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      -- , QuickCheck              >= 2.10
      -- , quickcheck-instances
      , hgeometry-ipe

--------------------------------------------------------------------------------
-- * Libraries
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- * HGeometry Library (main library)

library
    import:           all-setup
    hs-source-dirs:   src
    exposed-modules:
          Ipe
          Ipe.Literal
          Ipe.Value
          Ipe.Color
          Ipe.Attributes
          Ipe.Types
          Ipe.Writer
          Ipe.Reader
          Ipe.PathParser
          Ipe.IpeOut
          Ipe.FromIpe
          Ipe.Path
          Ipe.Matrix
          Ipe.Layer
          Ipe.Content

          Ipe.IpeRender
          Ipe.IpeToIpe
          -- HGeometry.PlaneGraph.Draw


    other-modules:
          Ipe.ParserPrimitives
          Ipe.FromIpe.UnboundedConvexChain

--------------------------------------------------------------------------------
-- * Test Suites
--------------------------------------------------------------------------------

test-suite ipe-hspec
  import:           all-setup, ipe-test-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      Ipe.ReaderSpec
      Paths_hgeometry_ipe
  autogen-modules:
      Paths_hgeometry_ipe
  hs-source-dirs:   test

test-suite doctest
    import:           all-setup, ipe-test-setup, doctest
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen

--------------------------------------------------------------------------------
-- * Benchmarks
--------------------------------------------------------------------------------
