cabal-version:      3.4
name:               hgeometry-kernel
version:            1.0.0.0
synopsis:            Basic Constant size Geometric Data types.
description:
  Basic, constant size geometric data types used by HGeometry.
homepage:           https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

tested-with:
    GHC == 9.2.5
    GHC == 9.4.4

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------
-- common setup-extras
--     build-depends:
--         aeson                   >= 2.1

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                -fspecialise-aggressively -fexpose-all-unfoldings

    build-depends:
        base                    >= 4.16.1.0      &&  < 5
      , hgeometry-combinatorial >= 1.0.0.0
      , hgeometry-vector        >= 1.0.0.0
      , hgeometry-point         >= 1.0.0.0
      , hiraffe                 >= 0.1
      , containers              >= 0.6
      , vector                  >= 0.13
      , lens                    >= 5.2
      , deepseq                 >= 1.1
      , semigroupoids           >= 5
      , semigroups              >= 0.18
      , random                  >= 1.2
      , witherable              >= 0.4
      , linear                  >= 1.21
      , data-clist              >= 0.2
      , semialign               ^>= 1.2

      , ghc-typelits-natnormalise >= 0.7.7
      , ghc-typelits-knownnat     >= 0.7.6

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies
      , QuantifiedConstraints

common quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      , QuickCheck              >= 2.10
      , quickcheck-instances
      , hgeometry-kernel
      , hgeometry-combinatorial:quickcheck
      , hgeometry-vector:quickcheck
      , hgeometry-point:quickcheck

--------------------------------------------------------------------------------
-- * Main Library

library
    import:           setup
    hs-source-dirs:   src
    exposed-modules:
        HGeometry.Kernel

        HGeometry.Matrix
        HGeometry.Matrix.Class

        HGeometry.Line
        HGeometry.Line.Class
        HGeometry.Line.PointAndVector
        HGeometry.Line.LineEQ

        HGeometry.HyperPlane
        HGeometry.HyperPlane.Class
        HGeometry.HyperPlane.NonVertical

        HGeometry.HalfSpace

        HGeometry.Box
        HGeometry.Box.Class
    -- --
    -- --    HGeometry.SoS.Point
    -- --    HGeometry.SoS.Orientation
    -- --    HGeometry.SoS.Determinant
    -- --
        HGeometry.Interval
        HGeometry.Interval.Class
        HGeometry.Interval.EndPoint

        HGeometry.Boundary

        HGeometry.LineSegment
        HGeometry.LineSegment.Class

        HGeometry.Intersection

        HGeometry.Triangle
        HGeometry.Triangle.Class

        HGeometry.Ball
        HGeometry.Ball.Class
        HGeometry.Ball.CenterAndRadius

        HGeometry.Transformation

        HGeometry.Direction

        HGeometry.Viewport

        HGeometry.Ellipse


    other-modules:
        HGeometry.Line.Intersection
        HGeometry.Box.Internal
        HGeometry.Box.Boxable
        HGeometry.Box.Corners
        HGeometry.Box.Sides
        HGeometry.HyperPlane.Internal
        HGeometry.Matrix.Internal
        HGeometry.Matrix.ByRows
        HGeometry.Transformation.Internal

--------------------------------------------------------------------------------
-- * Helper Libraries

library quickcheck
    import: setup, quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      HGeometry.Kernel.Instances
    build-depends:
         hgeometry-kernel

--------------------------------------------------------------------------------
-- * Tests stup

test-suite hgeometry-kernel-hspec
  import:           setup, quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      Point2Spec
      HGeometry.LineSegmentSpec
      HGeometry.BallSpec
      HGeometry.BoxSpec
      HGeometry.MatrixSpec
      HGeometry.HalfSpaceSpec
      HGeometry.IntervalSpec
  hs-source-dirs:   test
  build-depends:
      hgeometry-kernel:quickcheck

test-suite hgeometry-kernel-doctest
    import:           setup, quickcheck-setup
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen
    build-depends:
       doctest             >= 0.8
