cabal-version:      3.4
name:               hgeometry-kernel
version:            1.0.0.0
synopsis:            Basic Constant size Geometric Data types.
description:
  Basic, constant size geometric data types used by HGeometry.
homepage:           https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:
    README.md
    changelog.org
-- extra-source-files:

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------
-- common setup-extras
--     build-depends:
--         aeson                   >= 2.1

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                -fspecialise-aggressively -fexpose-all-unfoldings

    build-depends:
        base                       >= 4.18       && < 5
      , hgeometry-combinatorial    >= 1.0.0.0    && < 2
      , hgeometry-vector           >= 1.0.0.0    && < 2
      , hgeometry-point            >= 1.0.0.0    && < 2
      , hiraffe                    >= 0.1        && < 1
      , containers                 >= 0.6        && < 1
      , vector                     >= 0.13       && < 1
      , lens                       >= 5.2        && < 6
      , deepseq                    >= 1.1        && < 2
      , semigroupoids              >= 6.0.0.1    && < 7
      , foldable1-classes-compat   >= 0.1        && < 1
      , semigroups                 >= 0.18       && < 1
      , random                     >= 1.2        && < 2
      , witherable                 >= 0.4        && < 1
      , linear                     >= 1.21       && < 2
      , data-clist                 >= 0.2        && < 1
      , semialign                  >= 1.2        && < 2
      , data-default-class         >= 0.1        && < 1

      , ghc-typelits-natnormalise  >= 0.7.7      && < 1
      , ghc-typelits-knownnat      >= 0.7.6      && < 1

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies
      , QuantifiedConstraints

common quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9     && < 3
      , QuickCheck              >= 2.10    && < 3
      , quickcheck-instances    >= 0.3     && < 1
      , hgeometry-kernel
      , hgeometry-combinatorial:quickcheck
      , hgeometry-vector:quickcheck
      , hgeometry-point:quickcheck

--------------------------------------------------------------------------------
-- * Main Library

library
    import:           setup
    hs-source-dirs:   src
    exposed-modules:
        HGeometry.Kernel

        HGeometry.Matrix
        HGeometry.Matrix.Class

        HGeometry.Line
        HGeometry.Line.Class
        HGeometry.Line.PointAndVector

        HGeometry.Line.LineEQ
        HGeometry.Line.NonVertical.Class

        HGeometry.HyperPlane
        HGeometry.HyperPlane.Class
        HGeometry.HyperPlane.NonVertical

        HGeometry.Duality

        HGeometry.HalfSpace
        HGeometry.HalfLine

        -- HGeometry.HalfPlane

        HGeometry.Box
        HGeometry.Box.Class
    -- --
    -- --    HGeometry.SoS.Point
    -- --    HGeometry.SoS.Orientation
    -- --    HGeometry.SoS.Determinant
    -- --
        HGeometry.Interval
        HGeometry.Interval.Class
        HGeometry.Interval.EndPoint

        HGeometry.Boundary

        HGeometry.LineSegment
        HGeometry.LineSegment.Class

        HGeometry.Intersection

        HGeometry.Triangle
        HGeometry.Triangle.Class

        HGeometry.Ball
        HGeometry.Ball.Class
        HGeometry.Ball.CenterAndRadius

        HGeometry.Transformation

        HGeometry.Direction

        HGeometry.Viewport

        HGeometry.Ellipse


    other-modules:
        HGeometry.Line.Intersection
        HGeometry.Box.Internal
        HGeometry.Box.Boxable
        HGeometry.Box.Corners
        HGeometry.Box.Sides
        HGeometry.HyperPlane.Internal
        HGeometry.Matrix.Internal
        HGeometry.Matrix.ByRows
        HGeometry.Transformation.Internal

        HGeometry.LineSegment.Internal
        HGeometry.LineSegment.Intersection


--------------------------------------------------------------------------------
-- * Helper Libraries

library quickcheck
    import: setup, quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      HGeometry.Kernel.Instances
      HGeometry.Kernel.Test.Box
    build-depends:
         hgeometry-kernel

--------------------------------------------------------------------------------
-- * Tests stup

test-suite hgeometry-kernel-hspec
  import:           setup, quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      Point2Spec
      HGeometry.LineSegmentSpec
      HGeometry.BallSpec
      HGeometry.BoxSpec
      HGeometry.MatrixSpec
      HGeometry.HalfSpaceSpec
      HGeometry.HyperPlaneSpec
      HGeometry.IntervalSpec
      HGeometry.TriangleSpec
  hs-source-dirs:   test
  build-depends:
      hgeometry-kernel:quickcheck

test-suite hgeometry-kernel-doctest
    import:           setup, quickcheck-setup
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen
    build-depends:
       doctest             >= 0.8  && < 1
